Findbugs issues.